multi-tier web application/assembly_required/06_networkpolicy/app.networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app
  namespace: k8s-workshop
spec:
  podSelector:
    matchLabels:
      app:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr:
    ports:
    - protocol: TCP
      port: 8080
