multi-tier web application/assembly_required/06_networkpolicy/default.networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: k8s-workshop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
